<resources>
    <string name="app_name">askSJSU</string>

    <!-- Strings related to login -->
    <string name="title_activity_initial_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to Questions-->
    <string name="question_id">ID: %1$d</string>
    <string name="question_body">Question Body</string>
    <string name="date_created">Created: %1$s</string>
    <string name="expiration_date">Expires: %1$s</string>
    <string name="useful_count">Upvotes: %1$d</string>
    <string name="upvote">Upvote</string>
    <string-array name="question_type">
        <item>Polling</item>
        <item>Rating</item>
    </string-array>
    <string-array name="point_scale">
        <item>5-Point Scale</item>
        <item>10-Point Scale</item>
    </string-array>
    <!-- Strings related to Question Options-->
    <string name="option_name">Option Name</string>
    <string name="option_vote_count">Votes: %1$d</string>
    <string name="option_vote">Vote</string>
    <string name="option_delete">Delete</string>
    <string name="option_add">Add</string>
    <string name="downvote">Downvote</string>
    <string name="title_activity_home_page_nav_drawer">HomePageNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
